--- a/.github/workflows/great.yml
+++ b/.github/workflows/great.yml
@@ -12,3 +12,18 @@ jobs:
     steps:
       - name: Great world action step
         run: echo "Great world!"
+
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v6
+        with:
+          node-version: 24
+
+      - name: Install dependencies
+        run: npm install -g pnpm@latest-10
+      - run: pnpm install
+
+      - name: Run Linter
+        run: pnpm run eslint
