--- a/.github/workflows/great.yml
+++ b/.github/workflows/great.yml
@@ -23,7 +23,13 @@ jobs:
 
       - name: Install dependencies
         run: npm install -g pnpm@latest-10
-      - run: pnpm install
+      - run: pnpm install --no-audit --no-fund --no-optional
 
       - name: Run Linter
         run: pnpm run eslint
+
+      - name: Run Build
+        run: pnpm run build
+
+      - name: Run Tests
+        run: pnpm run test
